; ModuleID = '/home/carl/AnghaBench/git/extr_merge-recursive.c_dir_rename_find_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-recursive.c_dir_rename_find_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dir_rename_entry = type { i8*, i32 }
%struct.hashmap = type { i32 }

@ent = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.dir_rename_entry* (%struct.hashmap*, i8*)* @dir_rename_find_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.dir_rename_entry* @dir_rename_find_entry(%struct.hashmap* %0, i8* %1) #0 {
  %3 = alloca %struct.dir_rename_entry*, align 8
  %4 = alloca %struct.hashmap*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.dir_rename_entry, align 8
  store %struct.hashmap* %0, %struct.hashmap** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store %struct.dir_rename_entry* null, %struct.dir_rename_entry** %3, align 8
  br label %20

10:                                               ; preds = %2
  %11 = getelementptr inbounds %struct.dir_rename_entry, %struct.dir_rename_entry* %6, i32 0, i32 1
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @strhash(i8* %12)
  %14 = call i32 @hashmap_entry_init(i32* %11, i32 %13)
  %15 = load i8*, i8** %5, align 8
  %16 = getelementptr inbounds %struct.dir_rename_entry, %struct.dir_rename_entry* %6, i32 0, i32 0
  store i8* %15, i8** %16, align 8
  %17 = load %struct.hashmap*, %struct.hashmap** %4, align 8
  %18 = load i32, i32* @ent, align 4
  %19 = call %struct.dir_rename_entry* @hashmap_get_entry(%struct.hashmap* %17, %struct.dir_rename_entry* %6, i32 %18, i32* null)
  store %struct.dir_rename_entry* %19, %struct.dir_rename_entry** %3, align 8
  br label %20

20:                                               ; preds = %10, %9
  %21 = load %struct.dir_rename_entry*, %struct.dir_rename_entry** %3, align 8
  ret %struct.dir_rename_entry* %21
}

declare dso_local i32 @hashmap_entry_init(i32*, i32) #1

declare dso_local i32 @strhash(i8*) #1

declare dso_local %struct.dir_rename_entry* @hashmap_get_entry(%struct.hashmap*, %struct.dir_rename_entry*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
